basic oauth w/ redirect to index

--- a/env.sample
+++ b/env.sample
@@ -13,3 +13,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=appseed_db_usr
 DB_PASS=<STRONG_PASS>
+
+# Box OAuth
+CLIENT_ID = 'YOUR_CLIENT_ID'
+CLIENT_SECRET = 'YOUR_CLIENT_SECRET'
