--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@ FLASK_ENV=development
 # Used for CDN (in production)
 # No Slash at the end
 ASSETS_ROOT=/static/assets
+
+
+# Box OAuth
+CLIENT_ID = 'w4a96f3tlv72rh9cxgt7jofad52rtrd9'
+CLIENT_SECRET = 'YeOkHF8unnE81W6uYfnldbLBcko1X1gO'
+REDIRECT_URI = 'http://localhost:5000/oauth/callback'
