--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,42 @@
-flask==2.0.2
-Werkzeug==2.0.3
-jinja2==3.0.2
-flask_login==0.5.0
-flask_migrate==3.1.0
-WTForms==3.0.0
-flask_wtf==1.0.0
-flask_sqlalchemy==2.5.1
-sqlalchemy==1.4.29
-email_validator==1.1.3
-gunicorn==20.1.0
-flask-restx==0.5.1
-python-dotenv==0.19.2
+alembic==1.8.0
+aniso8601==9.0.1
+attrs==21.4.0
+boxsdk==3.4.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+dnspython==2.2.1
+email-validator==1.1.3
+Flask==2.0.2
+Flask-Login==0.5.0
+Flask-Migrate==3.1.0
 Flask-Minify==0.37
+flask-restx==0.5.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+gunicorn==20.1.0
+htmlmin==0.1.12
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.0.2
+jsmin==3.0.1
+jsonschema==4.7.0
+lesscpy==0.15.0
+Mako==1.2.1
+MarkupSafe==2.1.1
+ply==3.11
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+python-dotenv==0.19.2
+pytz==2022.1
+rcssmin==1.1.0
+requests==2.28.1
+requests-toolbelt==0.9.1
+six==1.16.0
+SQLAlchemy==1.4.29
+urllib3==1.26.10
+Werkzeug==2.0.3
+wrapt==1.14.1
+WTForms==3.0.0
+xxhash==3.0.0
