--- a/env.sample
+++ b/env.sample
@@ -6,14 +6,7 @@ FLASK_APP=run.py
 FLASK_ENV=development
 SECRET_KEY=YOUR_SUPER_KEY
 
-# If DEBUG=False (production mode)
-DB_ENGINE=mysql
-DB_NAME=appseed_db
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=appseed_db_usr
-DB_PASS=<STRONG_PASS>
-
 # Box OAuth
-CLIENT_ID = 'YOUR_CLIENT_ID'
-CLIENT_SECRET = 'YOUR_CLIENT_SECRET'
+CLIENT_ID='YOUR_CLIENT_ID'
+CLIENT_SECRET='YOUR_CLIENT_SECRET'
+REDIRECT_URI='http://localhost:5000/oauth/callback'
