--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ aniso8601==9.0.1
 attrs==21.4.0
 boxsdk==3.4.0
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
+cryptography==37.0.4
 dnspython==2.2.1
 email-validator==1.1.3
 Flask==2.0.2
@@ -26,6 +28,7 @@ lesscpy==0.15.0
 Mako==1.2.1
 MarkupSafe==2.1.1
 ply==3.11
+pycparser==2.21
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-dotenv==0.19.2
