--- a/env.sample
+++ b/env.sample
@@ -4,7 +4,8 @@ DEBUG=True
 # Flask ENV
 FLASK_APP=run.py
 FLASK_ENV=development
-SECRET_KEY=YOUR_SUPER_KEY
+SECRET_KEY='YOUR_SECRET_KEY'
+FERNET_KEY='YOU_ENCRYPTION_KEY'
 
 # Box OAuth
 CLIENT_ID='YOUR_CLIENT_ID'
